RESOLVED FIXED95899
Three XSLTProcessor functions don't need to be [Custom]
https://bugs.webkit.org/show_bug.cgi?id=95899
Summary Three XSLTProcessor functions don't need to be [Custom]
Adam Barth
Reported 2012-09-05 15:10:40 PDT
Three XSLTProcessor functions don't need to be [Custom]
Attachments
Patch (12.35 KB, patch)
2012-09-05 15:16 PDT, Adam Barth
no flags
Adam Barth
Comment 1 2012-09-05 15:16:23 PDT
Kentaro Hara
Comment 2 2012-09-05 16:33:32 PDT
Comment on attachment 162347 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=162347&action=review > Source/WebCore/ChangeLog:13 > + There is a (slight!) difference in behavior. Now, in the case of a type > + error, we return null instead of undefined. This change is unlikely to How do other browsers behave in this case?
Adam Barth
Comment 3 2012-09-05 21:09:29 PDT
(In reply to comment #2) > (From update of attachment 162347 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=162347&action=review > > > Source/WebCore/ChangeLog:13 > > + There is a (slight!) difference in behavior. Now, in the case of a type > > + error, we return null instead of undefined. This change is unlikely to > > How do other browsers behave in this case? I suspect other browsers throw exception, which we do as well for newer interfaces. For older interfaces, we tend to use [Optional=DefaultIsUndefined].
Kentaro Hara
Comment 4 2012-09-05 22:11:39 PDT
Comment on attachment 162347 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=162347&action=review >>> Source/WebCore/ChangeLog:13 >>> + error, we return null instead of undefined. This change is unlikely to >> >> How do other browsers behave in this case? > > I suspect other browsers throw exception, which we do as well for newer interfaces. For older interfaces, we tend to use [Optional=DefaultIsUndefined]. Thanks for the clarification. Then the change sounds reasonable.
Adam Barth
Comment 5 2012-09-06 00:13:01 PDT
Comment on attachment 162347 [details] Patch Thanks for the review.
WebKit Review Bot
Comment 6 2012-09-06 02:16:47 PDT
Comment on attachment 162347 [details] Patch Clearing flags on attachment: 162347 Committed r127710: <http://trac.webkit.org/changeset/127710>
WebKit Review Bot
Comment 7 2012-09-06 02:16:51 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.