Three XSLTProcessor functions don't need to be [Custom] https://bugs.webkit.org/show_bug.cgi?id=95899

Patch by Adam Barth <abarth@chromium.org> on 2012-09-06
Reviewed by Kentaro Hara.

Source/WebCore:

These functions are marked [Custom] because they predate our
improvements to [Optional]. Now that we have
[Optional=DefaultIsUndefined], we can autogenerate these functions.

There is a (slight!) difference in behavior. Now, in the case of a type
error, we return null instead of undefined. This change is unlikely to
cause compatibility problems because the vast majority of folks will
pass the correct arguments, and, in the few cases where folks pass the
wrong argument types, null and undefined will likely work similarly
(e.g., they're both falsy and throw when you try to access properties).

* bindings/js/JSXSLTProcessorCustom.cpp:
* bindings/v8/custom/V8XSLTProcessorCustom.cpp:
* xml/XSLTProcessor.cpp:
(WebCore::XSLTProcessor::transformToDocument):
(WebCore::XSLTProcessor::transformToFragment):
* xml/XSLTProcessor.h:
(WebCore::XSLTProcessor::importStylesheet):
* xml/XSLTProcessor.idl:

LayoutTests:

Update results to show that we return null rather than undefined on a
type error.

* fast/xsl/transform-xhr-doc-expected.txt:
* fast/xsl/xslt-processor-expected.txt:
* platform/chromium/fast/xsl/transform-xhr-doc-expected.txt:

Canonical link: https://commits.webkit.org/113812@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127710 268f45cc-cd09-0410-ab3c-d52691b4dbfc