Source/WebCore/bindings/js/JSXSLTProcessorCustom.cpp
@@ -46,45 +46,6 @@ using namespace JSC;
 
 namespace WebCore {
 
-JSValue JSXSLTProcessor::importStylesheet(ExecState* exec)
-{
-    JSValue nodeVal = exec->argument(0);
-    if (nodeVal.inherits(&JSNode::s_info)) {
-        JSNode* node = jsCast<JSNode*>(asObject(nodeVal));
-        impl()->importStylesheet(node->impl());
-        return jsUndefined();
-    }
-    // Throw exception?
-    return jsUndefined();
-}
-
-JSValue JSXSLTProcessor::transformToFragment(ExecState* exec)
-{
-    JSValue nodeVal = exec->argument(0);
-    JSValue docVal = exec->argument(1);
-    if (nodeVal.inherits(&JSNode::s_info) && docVal.inherits(&JSDocument::s_info)) {
-        WebCore::Node* node = jsCast<JSNode*>(asObject(nodeVal))->impl();
-        Document* doc = static_cast<Document*>(jsCast<JSDocument*>(asObject(docVal))->impl());
-        return toJS(exec, globalObject(), impl()->transformToFragment(node, doc).get());
-    }
-    // Throw exception?
-    return jsUndefined();
-}
-
-JSValue JSXSLTProcessor::transformToDocument(ExecState* exec)
-{
-    JSValue nodeVal = exec->argument(0);
-    if (nodeVal.inherits(&JSNode::s_info)) {
-        JSNode* node = jsCast<JSNode*>(asObject(nodeVal));
-        RefPtr<Document> resultDocument = impl()->transformToDocument(node->impl());
-        if (resultDocument)
-            return toJS(exec, globalObject(), resultDocument.get());
-        return jsUndefined();
-    }
-    // Throw exception?
-    return jsUndefined();
-}
-
 JSValue JSXSLTProcessor::setParameter(ExecState* exec)
 {
     if (exec->argument(1).isUndefinedOrNull() || exec->argument(2).isUndefinedOrNull())
